# whitemagic-clean

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json.example  ABOUT.md  AI_PRIMARY.md  ARCHIVE_AUDIT_REPORT.md  CHANGELOG.md  CHANGELOG_v16.md  CHANGELOG_v17.md  CODE_OF_CONDUCT.md  COMPLETE_SUCCESS_39_39.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.wasm  FINAL_6_MINUTES_SUMMARY.md  FINAL_NIGHT_COMPLETE_SUMMARY.md  FINAL_SESSION_SUMMARY_8_30PM.md  HANDOFF_FEB14_EVENING.md  HANDOFF_PHASE3_FEB16.md  LICENSE  MANIFEST.in  Makefile  NEXT_SESSION_CLONE_ARMIES_V2.md  NEXT_SESSION_SHADOW_CLONE_DEPLOYMENT.md  PARALLEL_CAPABILITIES_REPORT.md  PHASE3_B_C_COMPLETE_SUMMARY.md  PHASE3_COMPLETE_SUMMARY.md  POLYGLOT_ACTIVATION_GUIDE.md  PRIVACY_POLICY.md  README.md  RELEASE_EXECUTION_BOARD.md  RELEASE_NOTES.md  RELEASE_NOTES_v18.1.md  RELEASE_NOTES_v18.md  RELEASE_NOTES_v21.md  RELEASE_NOTES_v22_PREVIEW.md  RELEASE_v20_MANIFEST.md  (+188 more)
haskell/: cabal.project.local.example  haskell_bridge.py  whitemagic-divination.cabal
haskell/app/: Main.hs
haskell/src/: BoundaryDetection.hs  Casting.hs  DepGraph.hs  DharmaFFI.hs  DharmaRules.hs  FFI.hs  HexagramData.hs  IChing.hs  MaturityGate.hs  Query.hs  RuleComposer.hs  Transform.hs  WuXing.hs
haskell/test/: Spec.hs
imports_from_wm2/evolution/rust_core/: Cargo.toml
imports_from_wm2/evolution/rust_gene_scanner/: Cargo.toml
modular/: .bazelignore  .bazelrc  .bazelversion  .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  .shellcheckrc  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md  REPO.bazel  pyproject.toml
modular/.github/: CODEOWNERS
modular/.github/ISSUE_TEMPLATE/: config.yml  doc_issue.yaml  max_bug_report.yaml  max_builds_bug_report.yaml  max_feature_request.yaml  mojo_bug_report.yaml  mojo_feature_request.yaml
modular/.github/workflows/: build_and_test.yml  check_pr_target.yml  check_pr_title.yml  cla.yml  deploy_docs.yml  test_pre_commit.yml
modular/bazel/: BUILD.bazel  api.bzl  common.MODULE.bazel  config.bzl  mblack-main.py  modular_wheel_repository.bzl  mojo.MODULE.bazel  mojo_aliases.bzl
modular/bazel/docs/: usage.md
modular/bazel/internal/: BUILD.bazel  apply_mojo_fixits.py  bazel-debug.sh  binary_test.bzl  cfg_workaround.bzl  common.bazelrc  config.bzl  copy_files.bzl  create_venv.py  debugging_test_bin.cpp  debugging_test_lib.cpp  debugging_test_lib.h  find_tests_missing_on_ci.py  lit.bzl  load_bazel_tools.py  modular_cc_binary.bzl  modular_cc_library.bzl  modular_cc_test.bzl  modular_clang_tidy_test.bzl  modular_multi_py_version_test.bzl  modular_py_binary.bzl  modular_py_library.bzl  modular_py_test.bzl  modular_py_venv.bzl  modular_run_binary_test.bzl  modular_shared_library.bzl  modular_sphinx_docs.bzl  modular_strip_binary.bzl  modular_versioned_expand_template.bzl  mojo-filecheck-test.sh  mojo_binary.bzl  mojo_doc.bzl  mojo_filecheck_test.bzl  mojo_library.bzl  mojo_shared_library.bzl  mojo_test.bzl  mojo_test_environment.bzl  mojodoc_json_to_markdown.py  py_repl.bzl  pytest_runner.py  (+3 more)
modular/bazel/lint/: .markdownlint.yaml  BUILD.bazel  check_licenses.mojo  format-fast-wrapper.sh  format-wrapper.sh  lint_unused_lit_directives.py  markdownlint-wrapper.sh  mblack-wrapper.py  ruff-wrapper.sh  shellcheck-wrapper.sh
modular/bazel/pip/: mypy.bzl
modular/bazel/public-patches/: BUILD.bazel  breathe.BUILD  clang.BUILD  gazelle-default-features.patch  gazelle-exports-files.patch  gazelle-package-top.patch  grpc-no-macos-x86.patch  mistral-evals-0001-Check-health-endpoint-with-and-without-v1.patch  mistral-evals-0002-Increase-request-parallelism.patch  mistral-evals.BUILD  protobuf-dev-dep.patch  rules_cc_allowlists.patch  rules_cc_dsym_feature.patch  rules_cc_private_api.patch  rules_cc_textual_hdrs.patch  rules_python_hdrs.patch  rules_python_revert.patch  rules_python_wheel.patch  sphinx-markdown-builder.BUILD  torch-cuda-deps.patch
modular/docs/: README.md
modular/docs/eng-design/: README.md  mkdocs.yml
modular/max/: BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  README.md
modular/max/docs/: README.md  accuracy-debugging.md  contributing-models.md  development.md  kernel-benchmarking.md  max-benchmarking.md
modular/max/examples/: README.md  console.py
modular/max/kernels/: CLAUDE.md  README.md
modular/max/tests/: BUILD.bazel
modular/mojo/: CLAUDE.md  CONTRIBUTING.md  pixi.toml
modular/mojo/docs/: BUILD.bazel  README.md  changelog-released.md  changelog.md  faq.md  lib.mdx  roadmap.mdx
modular/mojo/examples/: README.md
modular/mojo/proposals/: README.md  align-decorator.md  always_inline_builtin.md  byte-as-uint8.md  canonicalize-int.md  collection-literal-design.md  comptime-expr.md  copyable-refines-movable.md  custom-type-merging.md  deinit-arg-convention.md  edge-case-behaviors.md  fixing-simple-literals.md  (+24 more)
modular/tools/: bazel
modular/utils/: setup-gpu-clock.sh
nexus/src-tauri/: Cargo.toml  tauri.conf.json
sdk/python-wasm/: MANIFEST.in  README.md  pyproject.toml
whitemagic-rust/: Cargo.toml  README.md  build.rs  pyproject.toml  rust_ci_final_retry.txt  test_debug.txt  test_output.txt  test_output_final.txt  test_output_final_retry.txt  test_output_final_retry_2.txt  test_output_final_retry_3.txt  test_output_full.txt  test_output_single.txt  wasm-build.sh
whitemagic-rust/src/: __init___v0.rs  __init___v1.rs  __init___v2.rs  __init___v3.rs  __init___v4.rs  __init___v5.rs  __init___v6.rs  __init___v7.rs  __init___v8.rs  __init___v9.rs  _rust_fallbacks_final.rs  _rust_fallbacks_v5.rs  adaptive_portal_v6.rs  advanced_parallel_v5.rs  advanced_scheduler.rs  agent_trust_rs.rs  albedo_v5.rs  anomaly_detector_v2.rs  arrow_bridge.rs  association_accelerator.rs  association_engine.rs  association_miner.rs  association_miner_v2.rs  association_walk.rs  async_batch_v3.rs  async_layer_v6.rs  async_memory.rs  audit.rs  audit_export_v5.rs  auto_cast_v7.rs  autocast_v0.rs  awareness_v8.rs  backup_v4.rs  base_garden_v2.rs  batch_processor.rs  bicameral_rs.rs  bitnet_bridge_v8.rs  bm25.rs  bootstrap_organs_v8.rs  bridge_v4.rs  (+1180 more)
(+10760 files in other folders)
