cabal-version:      3.0
name:               whitemagic-divination
version:            20.0.0.0
synopsis:           Type-safe I Ching + Wu Xing + Dharma + Dependency Graph engine
description:        Pure-functional hexagram casting, Wu Xing five-element
                    dynamics, GADT memory transforms, declarative Dharma rules
                    evaluation, tool dependency graph planning, and a query DSL.
                    Exposes a shared library via C FFI for Python integration.
license:            MIT
build-type:         Simple

-- ---------------------------------------------------------------------------
-- Library: core logic + C-callable FFI surface
-- ---------------------------------------------------------------------------
library
  exposed-modules:  IChing
                  , HexagramData
                  , Casting
                  , WuXing
                  , Transform
                  , Query
                  , FFI
                  , DharmaRules
                  , DepGraph
                  , DharmaFFI
  hs-source-dirs:   src
  build-depends:    base       >= 4.14 && < 5
                  , containers >= 0.6
                  , text       >= 1.2
                  , time       >= 1.9
  default-language: Haskell2010
  ghc-options:      -Wall -O2

-- ---------------------------------------------------------------------------
-- Foreign library: standalone .so for Python ctypes (bundles GHC RTS)
-- ---------------------------------------------------------------------------
foreign-library whitemagic-divination-flib
  type:               native-shared
  lib-version-info:   0:2:0
  other-modules:      IChing
                    , HexagramData
                    , Casting
                    , WuXing
                    , Transform
                    , Query
                    , FFI
                    , DharmaRules
                    , DepGraph
                    , DharmaFFI
  hs-source-dirs:     src
  build-depends:      base       >= 4.14 && < 5
                    , containers >= 0.6
                    , text       >= 1.2
                    , time       >= 1.9
  default-language:   Haskell2010
  ghc-options:        -Wall -O2

-- ---------------------------------------------------------------------------
-- Executable: smoke-test / CLI entry point
-- ---------------------------------------------------------------------------
executable whitemagic-divination
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base                    >= 4.14 && < 5
                  , whitemagic-divination
                  , text       >= 1.2
                  , time       >= 1.9
  default-language: Haskell2010
  ghc-options:      -Wall -O2

-- ---------------------------------------------------------------------------
-- Test suite
-- ---------------------------------------------------------------------------
test-suite whitemagic-divination-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base                    >= 4.14 && < 5
                  , whitemagic-divination
                  , text       >= 1.2
  default-language: Haskell2010
  ghc-options:      -Wall
