[package]
name = "whitemagic-rust"
version = "17.0.0"
edition = "2021"

[lib]
name = "whitemagic_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
rayon = "1.8"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
metrics = "0.22"

[build-dependencies]
pyo3-build-config = "0.21"
